--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:5000
       - ConnectionStrings__DefaultConnection=Server=postgres;Port=5432;Database=orderManager;Username=postgres;Password=postgres
-      - ServiceBus__OrderManagementUpdate=Endpoint={ AQUI }
+      - ServiceBus__OrderManagementUpdate={ API }
     depends_on:
       - postgres  
     networks:
